--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,10 @@ dist
 .temp
 .cache
 
+# VitePress build output and cache
+docs/.vitepress/dist
+docs/.vitepress/cache
+
 # Docusaurus cache and generated files
 .docusaurus
 
