fix: kenx-vite plugin implementation

--- a/packages/plugins/kenx-vite/package.json
+++ b/packages/plugins/kenx-vite/package.json
@@ -33,13 +33,12 @@
   },
   "homepage": "https://github.com/ckenx/kenx-js#README",
   "devDependencies": {
-    "@ckenx/node": "*",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "jsdom": "^24.1.0",
-    "vitest": "^2.0.1"
+    "@ckenx/node": "*"
   },
   "dependencies": {
     "vite": "^5.0.4"
+  },
+  "peerDependencies": {
+    "@ckenx/node": "*"
   }
 }
