--- a/packages/plugins/kenx-vite/tsconfig.json
+++ b/packages/plugins/kenx-vite/tsconfig.json
@@ -11,7 +11,7 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "declaration": true,
-    "types": ["vite/client", "vitest", "vitest/globals", "@testing-library/jest-dom"]
-  }
+    "declaration": true
+  },
+  "exclude": ["vitest.config.ts", "**/*.test.ts", "**/*.spec.ts", "dist", "node_modules"]
 }
