--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
   "author": "Fabrice Marlboro <fabrice.xyclone@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "yarn test:e2e",
+    "build": "turbo run compile",
+    "dev": "turbo run compile --watch",
+    "test": "turbo run test",
     "test:types": "tsd",
-    "build": "lerna run compile",
-    "watch": "lerna watch -- lerna run compile --scope=\\$LERNA_PACKAGE_NAME --include-dependents",
-    "test:packages": "lerna run test --stream --scope kenx-* --ignore examples-* -- --passWithNoTests --verbose --no-cache",
+    "test:unit": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
     "test:e2e": "jest --config ./test/jest.e2e.config.json --verbose --no-cache",
-    "git-reset": "git reset --hard HEAD",
-    "git-clean": "git clean -d -x -e node_modules -e packages -f",
-    "clean": "lerna clean --yes",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "format": "prettier --write 'packages/*/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx)' 'packages/*/!(node_modules)/**/*.js'",
-    "patch:all": "lerna version --no-private",
-    "publish:all": "node ./scripts/publish-packages.js",
     "test:examples": "jest --config ./test/jest.examples.config.js --verbose --no-cache",
     "test:examples:simple": "jest --config ./test/jest.examples.config.js --verbose --no-cache -t simple",
     "test:examples:complex": "cross-env COMPLEX=true jest --config ./test/jest.examples.config.js --verbose --no-cache -t complex",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "format": "prettier --write 'packages/*/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx)' 'packages/*/!(node_modules)/**/*.js'",
+    "clean": "turbo run clean && rm -rf node_modules/.cache/turbo",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "turbo run compile && changeset publish",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -34,14 +35,19 @@
     "fs-extra": "^11.1.1"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@changesets/changelog-github": "^0.5.0",
     "@types/fs-extra": "^11.0.4",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "@vitest/coverage-v8": "^1.2.0",
     "jest": "^29.7.0",
     "lerna": "^8.0.0",
     "prettier": "^3.1.0",
     "tsd": "^0.29.0",
+    "turbo": "^1.12.0",
     "typescript-eslint": "^0.0.1-alpha.0",
+    "vitest": "^1.2.0",
     "vitepress": "^1.6.4",
     "yargs": "^17.7.2"
   },
