enhc: define test for all packages

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "compile": "rimraf ./dist && tsc",
     "prepack": "yarn compile",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "echo \"No tests for CLI package\""
   },
   "repository": {
     "type": "git",
