--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -20,6 +20,8 @@
       "#root/*": ["*"]
     }
   },
+  "include": ["src/**/*"],
+  "exclude": ["test", "dist", "temp", "node_modules"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   }
