--- a/packages/plugins/kenx-http/package.json
+++ b/packages/plugins/kenx-http/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "rimraf ./dist && tsc",
     "prepack": "yarn compile",
-    "test": "",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
@@ -33,6 +34,7 @@
   },
   "homepage": "https://github.com/ckenx/kenx-js#README",
   "devDependencies": {
-    "@ckenx/node": "*"
+    "@ckenx/node": "*",
+    "vitest": "^1.2.0"
   }
 }
