--- a/packages/plugins/kenx-mongodb/package.json
+++ b/packages/plugins/kenx-mongodb/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "rimraf ./dist && tsc",
     "prepack": "yarn compile",
-    "test": "",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
@@ -14,7 +15,8 @@
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
-    "@ckenx/node": "*"
+    "@ckenx/node": "*",
+    "vitest": "^1.2.0"
   },
   "repository": {
     "type": "git",
