--- a/packages/plugins/kenx-socketio/tsconfig.json
+++ b/packages/plugins/kenx-socketio/tsconfig.json
@@ -12,5 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "declaration": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["test", "dist", "node_modules"]
 }
